--- a/index.ipynb
+++ b/index.ipynb
@@ -109,12 +109,10 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks # 3"
+    "number_of_weeks = 3 # 3"
    ]
   },
   {
